# Car-Maintenance-Tracker

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package.json  server.js
CVEs-and-Security/: CVE_ANALYSIS.md  ENDPOINT_SECURITY_MATRIX.md  MEMORY_ANALYSIS.md  PATCH_EXAMPLE.md  REVERSE_PROXY_SECURITY_AUDIT.md  SECURITY_AUDIT.md  SECURITY_FIXES.sh  SECURITY_IMPLEMENTATION_SUMMARY.md
_sources/: flag-icons-main.7z
public/: app.js  device-detect.js  index.html  styles.css  styles.desktop.css  styles.mobile.css
public/locales/: bg.json  en-US.json  ja-JP.json  pirate.json  th-TH.json
src/: domain.rs  error.rs  main.rs
src/features/: email.rs  mod.rs
src/features/auth/: commands.rs  handlers.rs  mod.rs  queries.rs  service.rs
src/features/events/: commands.rs  handlers.rs  mod.rs  queries.rs  service.rs
src/features/health/: mod.rs
src/infra/: audit_repository.rs  backup.rs  event_repository.rs  id_generator.rs  ip_extractor.rs  mod.rs  session_repository.rs  user_repository.rs
