[package]
name = "car_maintenance_tracker"
version = "1.0.0"
edition = "2021"
authors = ["Car Maintenance Tracker"]
description = "Rust backend for the Car Maintenance Tracker web app"

[dependencies]
axum = { version = "0.8", features = ["http1", "json", "macros", "tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "fs", "net"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
bcrypt = "0.15"
hyper = { version = "0.14", features = ["server"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
